# DJPlay

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/DJPlay/: settings.py  urls.py  wsgi.py
backend/account/: admin.py  consumers.py  exceptions.py  forms.py  models.py  paginations.py  routing.py  schemas.py  serializers.py  services.py  urls.py  views.py
backend/account/management/commands/: setup.py
backend/account/static/css/: alert.css
backend/account/static/js/: chat.js
backend/account/tests/: test_models.py  test_services.py
backend/chat/: consumers.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/checkers/: apps.py  models.py  services.py  urls.py  views.py
backend/chess/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/chess/static/css/: chess_home.css
backend/chess/static/css/chess/: chess.css
backend/chess/static/js/: chat.js
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/gomoku/: apps.py  consumers.py  exceptions.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/gomoku/static/css/: gomoku_home.css
backend/gomoku/static/js/: gomoku_burger.js  gomoku_connection.js
backend/settings/: base.py  local.py  production.py
backend/templates/: 400.html
backend/templates/account/: gomoku_parties.html  profile.html  users.html
backend/templates/gomoku/: gomoku.html  watch_party.html
(+270 files in other folders)
